[gd_scene load_steps=6 format=3 uid="uid://d0216y6og1y2l"]

[ext_resource type="Script" path="res://scripts/output.gd" id="1_78w81"]
[ext_resource type="Texture2D" uid="uid://cpvu1rsfkjm85" path="res://img/blc_empty.svg" id="2_ahcry"]
[ext_resource type="PackedScene" uid="uid://qhdnw168meeo" path="res://scenes/Hints.tscn" id="3_rvbva"]

[sub_resource type="Animation" id="Animation_acx3s"]
resource_name = "reset"
length = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Input/Box1:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_ahcry")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Input/Box2:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_ahcry")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Input/Box3:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_ahcry")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Input/Box4:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_ahcry")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wr8xo"]
_data = {
"reset": SubResource("Animation_acx3s")
}

[node name="output" type="Node2D"]
script = ExtResource("1_78w81")

[node name="Input" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 260.0
offset_bottom = 80.0

[node name="Box1" type="Sprite2D" parent="Input"]
position = Vector2(40, 40)
scale = Vector2(0.35, 0.35)
texture = ExtResource("2_ahcry")

[node name="Box2" type="Sprite2D" parent="Input"]
position = Vector2(100, 40)
scale = Vector2(0.35, 0.35)
texture = ExtResource("2_ahcry")

[node name="Box3" type="Sprite2D" parent="Input"]
position = Vector2(160, 40)
scale = Vector2(0.35, 0.35)
texture = ExtResource("2_ahcry")

[node name="Box4" type="Sprite2D" parent="Input"]
position = Vector2(220, 40)
scale = Vector2(0.35, 0.35)
texture = ExtResource("2_ahcry")

[node name="Hints" parent="." instance=ExtResource("3_rvbva")]
position = Vector2(260, 20)

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wr8xo")
}
